Images align fix

--- a/static/scss/_parts/_typo.scss
+++ b/static/scss/_parts/_typo.scss
@@ -37,7 +37,7 @@ s {
 
 iframe {
   width: 100%;
-  height: 400px;
+  height: 394px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.7);
   background: #000;
 }
